[gd_scene load_steps=16 format=3 uid="uid://bw0kjoybdcexh"]

[ext_resource type="Script" path="res://Scripts/Classes/tip_ui.gd" id="1_r70mv"]
[ext_resource type="Texture2D" uid="uid://baj15nd2vcwew" path="res://Assets/Images/UI/Pages/pxArt.png" id="2_4a0m6"]
[ext_resource type="Texture2D" uid="uid://ck3moc36i6fr5" path="res://Assets/Images/UI/Pages/title.png" id="2_xyydb"]
[ext_resource type="FontFile" uid="uid://drfv8ak22g1rm" path="res://Assets/Fonts/simhei.ttf" id="3_pdtyx"]
[ext_resource type="Texture2D" uid="uid://ce7nwkjqfe5di" path="res://Assets/Images/UI/Pages/button.png" id="5_6qbeb"]
[ext_resource type="FontFile" uid="uid://b0ev28ueo51cu" path="res://Assets/Fonts/5_Minecraft AE(支持中文).ttf" id="5_x0o6d"]
[ext_resource type="AudioStream" uid="uid://cy5exfxf0lyu0" path="res://Assets/Sounds/FXs/UIs/TipOpen.wav" id="7_cwwuj"]
[ext_resource type="AudioStream" uid="uid://ba5f3rmg2fs7m" path="res://Assets/Sounds/FXs/UIs/UIClick1.wav" id="8_ik4mo"]
[ext_resource type="AudioStream" uid="uid://cviyfrmvl7m" path="res://Assets/Sounds/FXs/UIs/TipCloseAudio.mp3" id="9_uuor8"]

[sub_resource type="Animation" id="Animation_ohkvx"]
resource_name = "Close"
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper/Title:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-217.671, -0.25, 0, 0.25, 0, -144.19, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.44254, -0.25, 0, 0.25, 0, 0.01, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.44254, -0.25, 0, 0.25, 0, 1.443, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.3, 0.7)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Paper:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.7, 0.9)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Paper:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0, 1397, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.7, 0.9)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Paper/OKButton:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(177.464, -0.25, 0, 0.25, 0, 81.8002, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_q8btg"]
resource_name = "Entry"
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1485, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 0.01, -0.25, 0, 0.25, 0, 1.44254, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper/Title:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-132.405, -0.25, 0, 0.25, 0, -132.405, -0.25, 0, 0.25, 0, -217.671, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 0.9)
}

[sub_resource type="Animation" id="Animation_qv2sa"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.44254, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper/Title:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-217.671, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Paper:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.44254, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Paper:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(960, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Paper/OKButton:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(177.464, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwpvy"]
_data = {
"Close": SubResource("Animation_ohkvx"),
"Entry": SubResource("Animation_q8btg"),
"RESET": SubResource("Animation_qv2sa")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_gkfcp"]
atlas = ExtResource("5_6qbeb")
region = Rect2(289, 226, 233, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_mohac"]
atlas = ExtResource("5_6qbeb")
region = Rect2(289, 318, 233, 89)

[node name="TipUI" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_r70mv")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rwpvy")
}
autoplay = "Entry"

[node name="Paper" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.44254, 1.44254)
texture = ExtResource("2_4a0m6")
region_enabled = true
region_rect = Rect2(0, 87, 820, 409)

[node name="Title" type="Sprite2D" parent="Paper"]
show_behind_parent = true
position = Vector2(-246.093, -217.671)
scale = Vector2(0.69322, 0.69322)
texture = ExtResource("2_xyydb")
region_enabled = true
region_rect = Rect2(219, 240, 360, 106)

[node name="Label" type="Label" parent="Paper/Title"]
offset_left = -153.0
offset_top = -44.0
offset_right = 454.0
offset_bottom = 114.0
scale = Vector2(0.518977, 0.518977)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_pdtyx")
theme_override_font_sizes/font_size = 64
text = "新能力"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OKButton" type="TextureButton" parent="Paper"]
show_behind_parent = true
offset_left = -128.939
offset_top = 177.464
offset_right = 105.061
offset_bottom = 265.464
focus_mode = 0
texture_normal = SubResource("AtlasTexture_gkfcp")
texture_pressed = SubResource("AtlasTexture_gkfcp")
texture_hover = SubResource("AtlasTexture_mohac")

[node name="Label" type="Label" parent="Paper/OKButton"]
layout_mode = 0
offset_left = 18.0
offset_top = 1.0
offset_right = 419.0
offset_bottom = 143.0
scale = Vector2(0.518977, 0.518977)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_x0o6d")
theme_override_font_sizes/font_size = 64
text = "了解！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TipOpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cwwuj")
volume_db = 5.0
autoplay = true
bus = &"Sound"

[node name="ButtonAppearAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ik4mo")
volume_db = 4.0
bus = &"Sound"

[node name="TipCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_uuor8")
bus = &"Sound"

[connection signal="pressed" from="Paper/OKButton" to="." method="_on_ok_button_pressed"]
